# nightjar

./: CLAUDE.md  README.md  pyproject.toml
docs/: testing.md
docs/decisions/: 011-test-harness.md  README.md
instrumentation/pilots/: __init__.py  latency_aware_pilot.py
instrumentation/trajectories/: __init__.py  trajectories.py
missions/: test_aerobatic_forest.yaml  test_cruise_straight.yaml  test_gentle_maneuver.yaml  test_medium_maneuver.yaml
ros2_ws/src/drone_bringup/: package.xml
ros2_ws/src/drone_bringup/launch/: full_stack.launch.py
ros2_ws/src/drone_pilot/: package.xml  setup.py
ros2_ws/src/drone_pilot/drone_pilot/: pilot_node.py
tests/unit/: test_pilot_model.py  test_trajectories.py
